added post and delete methods and also validation
