# middleware/validate.js
@@ -1,0 +1,27 @@
+const validator = require('../helpers/validate');
+
+const saveList = (req, res, next) => {
+  const validationRule = {
+    title: 'required|string',
+    date: 'required|date',
+    time: 'required|string',
+    place: 'required|string',
+    description: 'required|string',
+    completed: 'required|boolean'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
+module.exports = {
+  saveList
+};
